# resumenow-api

./: .coverage  .env.example  .gitignore  CLAUDE.md  CONVENTIONS.md  README.md  pyproject.toml
app/: main.py  types.py
app/lib/: agent.py  httpx.py
app/routers/: format.py  job.py  linkedin.py  optimize.py  parse.py
app/schema/: job.py  resume.py
tests/: conftest.py  test_format.py  test_parse.py
