[project]
name = "resumenow-api"
version = "0.1.0"
description = "Backend API for the ResumeNow app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "google-genai>=1.2.0",
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "vlmrun-hub>=0.1.30",
]
