[project]
name = "resumenow-api"
version = "0.1.0"
description = "Backend API for the ResumeNow app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi[standard]>=0.115.8",
    "google-genai>=1.2.0",
    "httpx>=0.28.1",
    "openai>=1.65.4",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "python-multipart>=0.0.20",
    "unstructured[doc,docx,md,pdf,rtf]>=0.16.23",
    "vlmrun-hub>=0.1.30",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
